importing json files in esm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   }
 }
