--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test": "npm run build && jest --testTimeout 60000",
     "test-except-dind": "npm run build && jest --testTimeout 60000 --testPathIgnorePatterns=dind",
     "coverage": "jest --coverage --testTimeout 60000",
-    "start": "ts-node --log-error src/index.ts --cwd examples/docker-compose-nodejs",
-    "dev": "touch .gitlab-ci.yml && nodemon -e ts --watch src --watch .gitlab-ci.yml --exec ts-node src/index.ts",
+    "start": "tsx --log-error src/index.ts --cwd examples/docker-compose-nodejs",
+    "dev": "touch .gitlab-ci.yml && nodemon -e ts --watch src --watch .gitlab-ci.yml --exec tsx src/index.ts",
     "fetch-and-patch-schema": "curl https://gitlab.com/gitlab-org/gitlab/-/raw/master/app/assets/javascripts/editor/schema/ci.json -sf | jq 'del(.. | .pattern?)' > src/schema/schema.json"
   },
   "dependencies": {
@@ -70,7 +70,7 @@
     "nodemon": "^3.1.1",
     "pkg": "5.x.x",
     "ts-jest": "29.x.x",
-    "ts-node": "10.x.x",
+    "tsx": "^4.19.0",
     "typescript": "5.x.x"
   },
   "engines": {
