--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --testTimeout 60000",
     "test-except-dind": "npm run build && NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --testTimeout 60000 --testPathIgnorePatterns=dind",
     "coverage": "FORCE_COLOR=1 NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --coverage --testTimeout 90000 --verbose",
-    "start": "tsx --log-error src/index.ts --cwd examples/docker-compose-nodejs",
-    "dev": "touch .gitlab-ci.yml && nodemon -e ts --watch src --watch .gitlab-ci.yml --exec tsx src/index.ts",
+    "start": "NODE_OPTIONS='--loader ts-node/esm' ts-node --log-error src/index.ts --cwd examples/docker-compose-nodejs",
+    "dev": "touch .gitlab-ci.yml && NODE_OPTIONS='--loader ts-node/esm' nodemon -e ts --watch src --watch .gitlab-ci.yml --exec ts-node src/index.ts",
     "fetch-and-patch-schema": "curl https://gitlab.com/gitlab-org/gitlab/-/raw/master/app/assets/javascripts/editor/schema/ci.json -sf | jq 'del(.. | .pattern?)' > src/schema/schema.json"
   },
   "dependencies": {
@@ -72,7 +72,7 @@
     "nodemon": "^3.1.1",
     "pkg": "5.x.x",
     "ts-jest": "29.x.x",
-    "tsx": "^4.19.0",
+    "ts-node": "10.x.x",
     "typescript": "5.x.x"
   },
   "engines": {
